--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+	.focus-outline-primary {
+		@apply focus-visible:outline-primary focus-visible:outline-dashed focus-visible:outline-offset-4 outline-2 rounded-xl;
+	}
+	.focus-outline-secondary {
+		@apply focus-visible:outline-secondary focus-visible:outline-dashed focus-visible:outline-offset-4 outline-2 rounded-xl;
+	}
+}
